Доработки Parser ini-files

--- a/ini_parser/parser/parser.vcxproj
+++ b/ini_parser/parser/parser.vcxproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ini_parser.h" />
+    <ClInclude Include="string_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
